# Discord-QR-Grabber-Bot

./: .replit  README.md  config.json  main.py  pyproject.toml  replit.nix  replit_zip_error_log.txt
.cache/replit/nix/: env.json
